--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ dependencies = [
   "fastapi[all]>=0.112.2",
   "pyjwt>=2.9.0",
   "aiofiles>=24.1.0",
+  "sqlalchemy>=2.0.32",
+  "passlib>=1.7.4",
+  "types-passlib>=1.7.7.20240819",
+  "types-aiofiles>=24.1.0.20240626",
 ]
 
 [project.optional-dependencies]
