--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,8 @@ fastapi==0.112.2
     # via csfd-db (pyproject.toml)
 fastapi-cli==0.0.5
     # via fastapi
+greenlet==3.0.3
+    # via sqlalchemy
 h11==0.14.0
     # via
     #   httpcore
@@ -52,6 +54,8 @@ mdurl==0.1.2
     # via markdown-it-py
 orjson==3.10.7
     # via fastapi
+passlib==1.7.4
+    # via csfd-db (pyproject.toml)
 pydantic==2.8.2
     # via
     #   fastapi
@@ -85,15 +89,22 @@ sniffio==1.3.1
     # via
     #   anyio
     #   httpx
+sqlalchemy==2.0.32
+    # via csfd-db (pyproject.toml)
 starlette==0.38.2
     # via fastapi
 typer==0.12.5
     # via fastapi-cli
+types-aiofiles==24.1.0.20240626
+    # via csfd-db (pyproject.toml)
+types-passlib==1.7.7.20240819
+    # via csfd-db (pyproject.toml)
 typing-extensions==4.12.2
     # via
     #   fastapi
     #   pydantic
     #   pydantic-core
+    #   sqlalchemy
     #   typer
 ujson==5.10.0
     # via fastapi
@@ -103,7 +114,7 @@ uvicorn==0.30.6
     #   fastapi-cli
 uvloop==0.20.0
     # via uvicorn
-watchfiles==0.23.0
+watchfiles==0.24.0
     # via uvicorn
-websockets==13.0
+websockets==13.0.1
     # via uvicorn
